# LBFL

./: .gitmodules  CMakeLists.txt  README.md
Include/: LBFL.h
Include/LBFL/: BinaryFiles.h
LBFL/: CMakeLists.txt  LBFL.cpp  LBFL.h
LBFL/Include/LBFL/: binary.h  utility.h
Source/: BinaryFiles.cpp  LBFL.cpp
Tests/: CMakeLists.txt  LBFLTest.cpp
